# ocr

./: .gitignore  Dockerfile  ocr_app.py  pyproject.toml  requirements.txt
