[project]
name = "image-ocr"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kamil Ciomcia", email = "kamil.ciomcia@gmail.com"},
]
dependencies = ["streamlit>=1.45.0", "pytesseract>=0.3.13", "opencv-python>=4.11.0.86", "pdf2image>=1.17.0", "easyocr>=1.7.2", "ipython>=9.2.0", "pymupdf>=1.25.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
